Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
6.4.0 RC1
-
None
-
-
f2b4adebd4 (qt/qtbase/dev) f2b4adebd4 (qt/tqtc-qtbase/dev) 7e476f5c48 (qt/qtbase/6.4) 7e476f5c48 (qt/tqtc-qtbase/6.4)
Description
Clang-Cl 14.0.6 installed via MSVC 2022 installer with Qt 6.4 RC1 and c++20.
In file included from C:\Code\Qt\qt6-cmake-qml-plugin-example-project\build-qt6-cmake-qml-plugin-example-project-ClangCL_Desktop_Qt_6_4_0_MSVC2019_64bit-Release\DownloadManagerplugin_init.cpp:1: In file included from C:\Qt\6.4.0\msvc2019_64\include\QtCore\QtPlugin:1: In file included from C:\Qt\6.4.0\msvc2019_64\include\QtCore/qplugin.h:10: In file included from C:\Qt\6.4.0\msvc2019_64\include\QtCore/qjsonobject.h:7: In file included from C:\Qt\6.4.0\msvc2019_64\include\QtCore/qjsonvalue.h:10: In file included from C:\Qt\6.4.0\msvc2019_64\include\QtCore/qcborvalue.h:8: C:\Qt\6.4.0\msvc2019_64\include\QtCore/qdatetime.h(458,16): error: alias template 'sys_time' requires template arguments; argument deduction only allowed for class templates return std::chrono::sys_time(duration);
See example project: