QDateTime: specify a class template argument

Although the code is legal in C++20 (due to the new CTAD rules for
alias templates), clang-cl errors out on it. Just specify the template
parameter, which we know anyways.

Change-Id: Ifdea31853d4281601cf40ed8adeb14e493a5ce04
Fixes: QTBUG-107043
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit f2b4adebd40c56243bc6f042bc7f46e800c12423)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>